AWS/VM/Security.tf
resource "aws_security_group" "Final-Project" {
  vpc_id = aws_vpc.Final-Project.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow SSH from anywhere
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] # Allow all outbound traffic
  }

  tags = {
    name = "Final-Project-security-group"
  }
}
